feature/change-form-return-word-document - update return template method